# SushiCutters

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  copy_assets  run_bench  run_benches  shell.nix
.github/workflows/: rust.yml
assets/prefabs/: pause_menu.ron
config/: bindings.ron  display.ron
src/: main.rs  sushi_cutters.rs
src/components/: colliders.rs  damage.rs  enemy.rs  markers.rs  mod.rs  player.rs  velocity.rs
src/input/: bindings.rs
src/mob/: enemy.rs  mod.rs
src/resources/: prefabs.rs
src/scenes/: mod.rs
src/states/: mod.rs  running.rs  scene_select.rs
src/systems/: border_collision.rs  collision_debug.rs  collisions.rs  damage.rs  health_indicators.rs  kill_after.rs  mod.rs  move_enemies.rs  player_control.rs  player_movement.rs  score.rs  score_ui.rs  velocity.rs
src/util/: frame_bench.rs  mod.rs  transform.rs
