[package]
name = "sushi_cutters"
version = "0.1.0"
authors = []
edition = "2018"
license = "Apache-2.0"

[dependencies]
amethyst = "0.15.0"
serde = { version = "1.0.110", features = ["derive"] }

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
