[package]
name = "sushi_cutters"
version = "0.1.0"
authors = ["Eamon Caton <cargo@etcaton.dev>", "Masa Maeda"]
edition = "2018"
license = "Apache-2.0"
description = "A 2D game written using the Amethyst engine"
repository = "ssh://git@github.com/SushiCoders/SushiCutters"
readme = "README.md"
keywords = ["sushicutters", "game"]
categories = ["games"]

# Add debug symbols for use with profiling
# Remove this for a real release
[profile.release]
debug = true

[dependencies]
amethyst = "0.15.0"
serde = { version = "1.0.110", features = ["derive"] }
rand = "0.7.3"
log = "0.4.8"
bumpalo = {version = "3.4.0", features = ["collections"]}

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["precommit-hook", "run-cargo-clippy", "run-cargo-fmt", "run-cargo-test"]

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
benchmark = []
